--- a/views/layouts/layout.pug
+++ b/views/layouts/layout.pug
@@ -2,12 +2,11 @@ doctype html
 html
 	head
 		meta(charset="utf-8")
-		title Hello world
+		block title
 		link(href="dist/css/main.css" rel="stylesheet")
 	body
 		header
 			| 这是头部
-		block con
-		
+		block con		
 		footer
 			| 这是底部
